[NTP] Use profile path for local image copy

Previously the local image copy was stored in the user data directory
meaning that all profiles shared a single image. Instead each profile
should have a separate copy.

Bug: 888076
Change-Id: I91c052fa7d440b1adeb5d98cd8bfc35a37d976aa
Reviewed-on: https://chromium-review.googlesource.com/1239456
Commit-Queue: Kyle Milka <kmilka@chromium.org>
Reviewed-by: Mathieu Perreault <mathp@chromium.org>
Cr-Commit-Position: refs/heads/master@{#593960}
Former-commit-id: ed7c3b311e22e62f62b2c9c9b414255b048423dc