chrome/browser/search/instant_service.cc
@@ -85,23 +85,41 @@ std::unique_ptr<base::DictionaryValue> NtpCustomBackgroundDefaults() {
   return defaults;
 }
 
-base::FilePath GetLocalFilePath() {
+void CopyFileToProfilePath(const base::FilePath& from_path,
+                           const base::FilePath& profile_path) {
+  base::CopyFile(from_path,
+                 profile_path.AppendASCII(
+                     chrome::kChromeSearchLocalNtpBackgroundFilename));
+}
+
+void RemoveLocalBackgroundImageCopy(const base::FilePath& profile_path) {
+  base::DeleteFile(
+      profile_path.AppendASCII(chrome::kChromeSearchLocalNtpBackgroundFilename),
+      false);
+}
+
+// In some cases (Sync, upgrading versions) its necessary to check if the file
+// actually exists and is in the correct location.
+bool CheckLocalBackgroundImageExists(const base::FilePath& profile_path) {
   base::FilePath user_data_dir;
   base::PathService::Get(chrome::DIR_USER_DATA, &user_data_dir);
-  return user_data_dir.AppendASCII(
+  base::FilePath profile_image =
+      profile_path.AppendASCII(chrome::kChromeSearchLocalNtpBackgroundFilename);
+  base::FilePath user_data_image = user_data_dir.AppendASCII(
       chrome::kChromeSearchLocalNtpBackgroundFilename);
-}
 
-void CopyFileToProfilePath(const base::FilePath& from_path) {
-  base::CopyFile(from_path, GetLocalFilePath());
-}
+  if (base::PathExists(profile_image))
+    return true;
 
-void RemoveLocalBackgroundImageCopy() {
-  base::DeleteFile(GetLocalFilePath(), false);
-}
+  // The image was originally stored in the user data dir, it needs to be moved
+  // to the profile path if it's still there.
+  if (base::PathExists(user_data_image)) {
+    base::CopyFile(user_data_image, profile_image);
+    base::DeleteFile(user_data_image, false);
+    return true;
+  }
 
-bool CheckLocalBackgroundImageExists() {
-  return base::PathExists(GetLocalFilePath());
+  return false;
 }
 
 bool IsLocalFileUrl(GURL url) {
@@ -366,9 +384,9 @@ void InstantService::SetCustomBackgroundURLWithAttributions(
     const std::string& attribution_line_2,
     const GURL& action_url) {
   pref_service_->SetBoolean(prefs::kNtpCustomBackgroundLocalToDevice, false);
-  base::PostTaskWithTraits(FROM_HERE,
-                           {base::TaskPriority::USER_VISIBLE, base::MayBlock()},
-                           base::BindOnce(&RemoveLocalBackgroundImageCopy));
+  base::PostTaskWithTraits(
+      FROM_HERE, {base::TaskPriority::USER_VISIBLE, base::MayBlock()},
+      base::BindOnce(&RemoveLocalBackgroundImageCopy, profile_->GetPath()));
 
   if (background_url.is_valid()) {
     base::DictionaryValue background_info = GetBackgroundInfoAsDict(
@@ -395,7 +413,7 @@ void InstantService::SetBackgroundToLocalResource() {
 void InstantService::SelectLocalBackgroundImage(const base::FilePath& path) {
   base::PostTaskWithTraitsAndReply(
       FROM_HERE, {base::TaskPriority::USER_VISIBLE, base::MayBlock()},
-      base::BindOnce(&CopyFileToProfilePath, path),
+      base::BindOnce(&CopyFileToProfilePath, path, profile_->GetPath()),
       base::BindOnce(&InstantService::SetBackgroundToLocalResource,
                      weak_ptr_factory_.GetWeakPtr()));
 }
@@ -644,7 +662,7 @@ void InstantService::ApplyOrResetCustomBackgroundThemeInfo() {
       background_local_to_device_pref->IsDefaultValue()) {
     base::PostTaskWithTraitsAndReplyWithResult(
         FROM_HERE, {base::TaskPriority::USER_VISIBLE, base::MayBlock()},
-        base::BindOnce(&CheckLocalBackgroundImageExists),
+        base::BindOnce(&CheckLocalBackgroundImageExists, profile_->GetPath()),
         base::BindOnce(
             &InstantService::ApplyCustomBackgroundThemeInfoFromLocalFile,
             weak_ptr_factory_.GetWeakPtr()));
@@ -717,9 +735,9 @@ void InstantService::ApplyCustomBackgroundThemeInfo() {
 void InstantService::ResetCustomBackgroundThemeInfo() {
   pref_service_->ClearPref(prefs::kNtpCustomBackgroundDict);
   pref_service_->SetBoolean(prefs::kNtpCustomBackgroundLocalToDevice, false);
-  base::PostTaskWithTraits(FROM_HERE,
-                           {base::TaskPriority::USER_VISIBLE, base::MayBlock()},
-                           base::BindOnce(&RemoveLocalBackgroundImageCopy));
+  base::PostTaskWithTraits(
+      FROM_HERE, {base::TaskPriority::USER_VISIBLE, base::MayBlock()},
+      base::BindOnce(&RemoveLocalBackgroundImageCopy, profile_->GetPath()));
 
   FallbackToDefaultThemeInfo();
 }
